--- a/src/main/resources/templates/board/listArticles.html
+++ b/src/main/resources/templates/board/listArticles.html
@@ -22,14 +22,14 @@ layout:decorate="~{layout/defaultLayout}">
 <!-- 해당 페이지 고유 스크립트 추가 -->
 <th:block layout:fragment="script"> 
 	<script th:inline="javascript">
-    function checkLogin() {
+   <!-- function checkLogin() {
         /* 사용자 로그인 여부 확인 */
         var isAuthenticated = /*[[${#authorization.expression('isAuthenticated()')}]]*/;
 
         if (!isAuthenticated) {
             alert("로그인 후 사용이 가능합니다.");
         }
-    }
+    }-->
 </script>
 <!-- 
     <!--    <script th:src="@{/js/page/home.js}"></script>-->
