--- a/src/main/resources/templates/board/viewArticle.html
+++ b/src/main/resources/templates/board/viewArticle.html
@@ -18,7 +18,14 @@ layout:decorate="~{layout/defaultLayout}"><!--푸터, 헤더 적용-->
               flex-direction: row; 
               align-items: start;
           }
-          
+     .content{
+      display: flex;
+      flex-direction: column;
+      
+       }
+       .button-area{
+        padding-left: 10%;
+       }
           
   </style>
       <!--    <link rel="stylesheet" th:href="@{/css/page/home.css}" >-->
@@ -28,21 +35,62 @@ layout:decorate="~{layout/defaultLayout}"><!--푸터, 헤더 적용-->
    <script th:inline="javascript">
    
    document.addEventListener("DOMContentLoaded", function() {
-	      var editButton = document.getElementById("editButton");
-	      var titleInput = document.getElementById("titleInput");
-	      var contentTextarea = document.getElementById("contentTextarea");
-	      var deleteButton = document.getElementById("deleteButton"); // 추가
-	      
-	      editButton.addEventListener("click", function() {
-	    	topLevelSelect.removeAttribute("disabled");
-	        titleInput.removeAttribute("disabled");
-	        contentTextarea.removeAttribute("disabled");
-	        editButton.style.display = "none";
-	        resetButton.style.display = "inline";
-	        saveButton.style.display = "inline";
-	        deleteButton.style.display = "none";
-	      });	      
-	    });
+         var update_btn = document.getElementById("update_btn");
+         var topLevelSelect = document.getElementById("topLevelSelect");
+         var titleInput = document.getElementById("titleInput");
+         var contentTextarea = document.getElementById("contentTextarea");
+         var delete_btn = document.getElementById("delete_btn"); // 추가
+         var reset_btn = document.getElementById("reset_btn"); // reset 버튼에 대한 참조 추가
+         
+      // 초기 제목과 내용 값을 저장합니다.
+      	 var inittopLevel = topLevelSelect.value;
+         var initialTitle = titleInput.value;
+         var initialContent = contentTextarea.value;
+         
+         // 수정 버튼 클릭 시 동작 설정
+         update_btn.addEventListener("click", function() {
+           // 필요한 입력 요소들을 활성화합니다.
+           topLevelSelect.removeAttribute("disabled");
+           titleInput.removeAttribute("disabled");
+           contentTextarea.removeAttribute("disabled");
+           // 버튼들의 표시를 조정하여 활성화 상태를 표시하고 위치를 일정하게 유지.
+           update_btn.style.display = "none";
+           reset_btn.style.display = "inline";
+           save_btn.style.display = "inline";
+           delete_btn.style.display = "none";
+         });   
+         
+      // reset 버튼을 눌렀을 때의 동작을 설정합니다.
+         reset_btn.addEventListener("click", function() {
+             // 초기 제목과 내용 값으로 되돌립니다.
+             topLevelSelect.value = inittopLevel;
+             titleInput.value = initialTitle;
+             contentTextarea.value = initialContent;
+         });
+      
+         save_btn.addEventListener("click", function() {
+        	    // 수정된 내용을 서버로 전송
+        	    var updatedData = {
+        	      category_num: topLevelSelect.value,
+        	      title: titleInput.value,
+        	      content: contentTextarea.value
+        	    };
+
+        	    // AJAX 요청을 사용하여 데이터를 서버로 전송
+        	    var xhr = new XMLHttpRequest();
+        	    xhr.open("POST", "/edit/" + post_num, true); // 수정 API 엔드포인트로 변경해야 함
+        	    xhr.setRequestHeader("Content-Type", "application/json");
+        	    xhr.onreadystatechange = function() {
+        	      if (xhr.readyState === 4 && xhr.status === 200) {
+        	        // 서버 응답을 처리하는 코드
+        	        alert("수정이 완료되었습니다.");
+        	      }
+        	    };
+        	    xhr.send(JSON.stringify(updatedData));
+        	  });
+       });
+   
+   
    
     
    /* 현재 날짜 가져오기 */
@@ -72,6 +120,7 @@ layout:decorate="~{layout/defaultLayout}"><!--푸터, 헤더 적용-->
   <div th:replace="sidebar/article :: articleSidebar"></div>
   
   <div class="content">
+  <div>
     <h3 >게시글 내용 보기</h3>
     <h4>게시글 정보</h4>
     <h5>게시글번호 : <span th:text="${board.post_num}"></span>
@@ -94,9 +143,7 @@ layout:decorate="~{layout/defaultLayout}"><!--푸터, 헤더 적용-->
                         <option th:value="128">식물게시판</option>
                       </select>
                       
-                </td>
-            
-           
+                </td>        
             </tr> 
             <tr>
                 <td align="left">제목 </td>
@@ -106,21 +153,20 @@ layout:decorate="~{layout/defaultLayout}"><!--푸터, 헤더 적용-->
                 <td align="left" valign="top"><br>내용 </td>
                 <td colspan="2"><textarea  id="contentTextarea"  name="content" rows="10" cols="65" maxlength="4000" th:field="*{content}" disabled></textarea> </td>
             </tr>
-            <tr>
-                <td align="left"> </td>
-                <td colspan="2"> 
-                      <input type="reset" value="초기화" id="resetButton" style="display: none;">
-                       <input type="submit" value="저장하기" id="saveButton" style="display: none;">	        
-                </td>
-            </tr>
+
         </table>
     </form>
-         <form th:action="@{delete/{post_num}(post_num=${board.post_num})}" method="post">
-         	<input type="button" value="수정하기" id="editButton" >
-         	<input type="submit" value="삭제하기" id="deleteButton">
-   		 	<input type="hidden" name="categoryNum" th:value="${board.category_num}" />
-   		 </form>
+    </div>
+         <div class="button-area">
+            <button id="reset_btn" style="display: none;">초기화</button>
+            <button id="save_btn" style="display: none;">저장하기</button>
+            <button  id="update_btn"  >수정하기</button>
+            <button  id="delete_btn">삭제하기</button>
+             <input type="hidden" name="categoryNum" th:value="${board.category_num}" /> 
+          </div>
+          
+          </div>
   </div>
-</div>
+
 </body>
 </html>
